<resources>
    <string name="app_name">Jobs Finder</string>
    <string name="app_name1">Jobs</string>
    <string name="app_name2">Finder</string>
    <string name="splash_title1">Find your</string>
    <string name="splash_title2">dream job</string>
    <string name="splash_title3">here!</string>
    <string name="splash_subtitle">Login as:</string>
    <string name="splash_recruiter">Recruiter</string>
    <string name="splash_jobseeker">Job seeker</string>
    <string name="splash_admin">Login as Admin</string>
    <string name="login_btn">Login</string>
    <string name="welcome_rec1">Glad to see</string>
    <string name="welcome_rec2">you back recruiter!</string>
    <string name="welcome_seek1">Welcome back </string>
    <string name="welcome_seek2">to your journey!</string>
    <string name="hintUsername">Email</string>
    <string name="hintPassword">Password</string>
    <string name="create_acc">Don\'t have an account?</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="forgot_pass_title">Forgot password</string>
    <string name="error_invalid_email">Empty or invalid email</string>
    <string name="error_pass">Password is blank or incorrect (at least 6 characters)</string>
    <string name="error_email_pass">Please check the fields again</string>
    <string name="login_failed">Login failed…Please check again</string>
    <string name="error_wrong_passwordOrUsername">Email does not exist or password is incorrect</string>
    <string name="wrong_role">Login with wrong role!</string>
    <string name="duplicate_phone">Duplicate phone number</string>
    <string name="fingerAuth_error">Authorize error</string>
    <string name="fingerAuth_success">Authorize success</string>
    <string name="fingerAuth_failed">Authorize failed</string>
    <string name="fingerAuth_title">Log in with biometric authentication</string>
    <string name="fingerAuth_dialogtitle">Biometric activation failed</string>
    <string name="fingerAuth_dialogSubtitle">If you just changed your password or want to sign in with a different account, use your password to sign in again</string>
    <string name="fingerAuth_usePassword">Use account password</string>
    <string name="register_btn">Register</string>
    <string name="return_login_seek">Start looking for work</string>
    <string name="return_login_rec">Start recruiting</string>
    <string name="hintrePassword">Re-enter password</string>
    <string name="return_login">Already have an account?</string>
    <string name="error_invalid_name">Name is blank or has an invalid length (>50)</string>
    <string name="error_invalid_hotline">Hotline is empty or has an invalid length (=10)</string>
    <string name="error_invalid_phone">Phone is empty or has an invalid length (=10)</string>
    <string name="error_invalid_addr">Address is blank</string>
    <string name="error_invalid_reEnterPass">Re-enter password is blank or does match</string>
    <string name="register_success">Register success!</string>
    <string name="register_failed">Register failed!</string>
    <string name="register_title_rec1">Register to becoming</string>
    <string name="register_title_rec2">a recruiter</string>
    <string name="note_register">(Scrolldown and complete all the fields below)</string>
    <string name="rec_name">Recruiter name</string>
    <string name="rec_address">Address</string>
    <string name="rec_taxcode">Tax code</string>
    <string name="rec_hotline">Hotline</string>
    <string name="rec_description">Description</string>
    <string name="rec_description_title">Say hi and briefly introduce yourself!</string>
    <string name="rec_foundationDay">Foundation day</string>
    <string name="rec_typeOfBusiness">Type of business</string>
    <string name="rec_TOB_private">Private enterprise</string>
    <string name="rec_TOB_state">State-owned enterprise</string>
    <string name="rec_TOB_partnership">Partnership enterprise</string>
    <string name="rec_TOB_shareholding">Shareholding enterprise</string>
    <string name="rec_TOB_liability">Limited liability</string>
    <string name="rec_sectors">Business Sectors</string>
    <string name="rec__sec_ECommerce">E-commerce</string>
    <string name="rec_sec_realestate">Real Estate</string>
    <string name="rec_sec_manufacturing">Manufacturing</string>
    <string name="rec_sec_FandB">F&amp;B</string>
    <string name="rec_sec_finance">Financial Business</string>
    <string name="rec_sec_tourism">Tourism </string>
    <string name="rec_sec_other">Other services</string>
    <string name="register_title_seek1">Prepare to find</string>
    <string name="register_title_seek2">your dream jobs</string>
    <string name="seek_age">Age</string>
    <string name="seek_phone">Phone numbers</string>
    <string name="seek_name">User name</string>
    <string name="FP_Title1">Check your email</string>
    <string name="FP_Title2">Successfully</string>
    <string name="FP_subTitle1">To reset your password, you need your email</string>
    <string name="FP_subTitle1a">that can be authenticated</string>
    <string name="FP_subTitle2">We have sent the reset password to the email address</string>
    <string name="FP_resetPassBtn">Reset password</string>
    <string name="FP_backToLoginBtn">Back to Login</string>
    <string name="FP_toast">The link has been sent</string>
    <string name="FP_Emailnot_registered">Email is not registered</string>
    <string name="FP_error_unknown">Error Unknown</string>
    <string name="backpress_ask">Press back again to exit</string>
    <string name="ic_home">Home</string>
    <string name="ic_jobManagement">Management</string>
    <string name="ic_notify">Notification</string>
    <string name="ic_profile">Profile</string>
    <string name="grid_findNewJob">Find new jobs</string>
    <string name="grid_wallet">Wallet</string>
    <string name="grid_job_applied">Jobs applied</string>
    <string name="grid_job_checkin">Jobs check in</string>
    <string name="grid_reports">Reports</string>
    <string name="grid_saveJob">Saved</string>
    <string name="grid_statistical">Statistical</string>
    <string name="grid_jobHistory">Job history </string>
    <string name="grid_recruit">Recruit</string>
    <string name="grid_recruit_posted">Recruit posted</string>
    <string name="notification_title">Notification</string>
    <string name="no_noti">No notification</string>
    <string name="from">From:</string>
    <string name="BUsername">BUser name</string>
    <string name="close_btn">Close</string>
    <string name="add_card_to_user_wallet">Added card to your wallet</string>
    <string name="from_wallet">from wallet</string>
    <string name="to_wallet">to wallet</string>
    <string name="refund">Refund</string>
    <string name="from_job">From job:</string>
    <string name="applied">applied to your job</string>
    <string name="reject_from">You have been rejected from</string>
    <string name="approve_from">You have been approved from</string>
    <string name="reject_success">Rejected</string>
    <string name="approve_success">Approved</string>
    <string name="delete_all">Delete all</string>
    <string name="from_job_text">from job</string>
    <string name="wallet_title">Wallet</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallet_history">History</string>
    <string name="bank_name">Bank</string>
    <string name="wallet_amount">Amount</string>
    <string name="card_number">Card number</string>
    <string name="choose_color">Choose color</string>
    <string name="exp_date">Expired date</string>
    <string name="no_card">No card in wallet</string>
    <string name="error_invalid_bank">Bank is blank</string>
    <string name="error_invalid_exp_date">Expired date is blank</string>
    <string name="error_invalid_card_num">Card number has at least 10 characters and maximum 16 characters</string>
    <string name="add_card_success">Add card success</string>
    <string name="add_card_fail">Fail to add card</string>
    <string name="delete_card_success">Deleted</string>
    <string name="add_cash_success">Add cash to card success</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="no_choose_bank">Bank is blank</string>
    <string name="no_choose_year">Year is blank</string>
    <string name="no_choose_month">Month is blank</string>
    <string name="duplicate_card">This card already exist</string>
    <string name="no_history">Nothing here</string>
    <string name="choose_Bank">Choose bank</string>
    <string name="all_card">All card</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit to wallet</string>
    <string name="withdraw_success">Withdraw success</string>
    <string name="deposit_success">Deposit success</string>
    <string name="no_amount">Amount blank</string>
    <string name="not_enough_money">Insufficient balance</string>
    <string name="amount">Amount</string>
    <string name="wallet_amount_title">Wallet amount:</string>
    <string name="wallet_deposit_amount">Enter deposit amount!</string>
    <string name="wallet_deposit_success">Payment successfully!</string>
    <string name="wallet_deposit_failed">Payment cancel!</string>
    <string name="wallet_deposit_error">Payment error!</string>
    <string name="wallet_deposit_input_confirmBTN">Confirm</string>
    <string name="wallet_deposit_orderPayment_title">Payment confirmation</string>
    <string name="wallet_deposit_orderPayment_total">Total payment:</string>
    <string name="wallet_deposit_payment">Pay by ZaloPay</string>
    <string name="delete">Delete card</string>
    <string name="cancel">Cancel</string>
    <string name="add_cash">Add cash to card</string>
    <string name="add_card">Add card</string>
    <string name="Ok">Ok</string>
    <string name="username">Username</string>
    <string name="decoy_username">User Name</string>
    <string name="profile_setting">Settings</string>
    <string name="profile_account">Account</string>
    <string name="profile_logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="profile_edited">Profile edited</string>
    <string name="profile_logout_toast">Log out successfully</string>
    <string name="blank_tax_code">Tax code is blank</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profile_img">Tap to edit image</string>
    <string name="edit_profile_name">User name</string>
    <string name="edit_profile_gender">Gender</string>
    <string name="edit_profile_enterprise">Enterprise name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_phonenum">Phone number</string>
    <string name="edit_profile_age">Age</string>
    <string name="edit_profile_gendermale">Male</string>
    <string name="edit_profile_genderfemale">Female</string>
    <string name="edit_profile_genderother">Other</string>
    <string name="edit_profile_save">Save</string>
    <string name="close">Close</string>
    <string name="Ji_num_of_rec_title">Number of Recruits:</string>
    <string name="Ji_num_of_recruits">3</string>
    <string name="Ji_sub">Employees</string>
    <string name="Ji_workTime">Worktime:</string>
    <string name="Ji_recruited1">Recruited:</string>
    <string name="Ji_posttime">45 minutes ago</string>
    <string name="Ji_salary">20,000</string>
    <string name="Ji_unit3">/Hour</string>
    <string name="post_job_title">Job title</string>
    <string name="status_row_posted_job">Status:</string>
    <string name="status">Status</string>
    <string name="check_in">Check in</string>
    <string name="confirmed">Confirmed</string>
    <string name="phone_num_title">Phone number: </string>
    <string name="address_title">Address: </string>
    <string name="role_title">Role: </string>
    <string name="disable_acc">Disable</string>
</resources>