<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <RelativeLayout
            android:id="@+id/topSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/posted_job_job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/post_job_title"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/middleSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topSection"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/layoutmiddleSection1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">
                <TextView
                    android:id="@+id/NumRecTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/Ji_num_of_rec_title"/>

                <TextView
                    android:id="@+id/NumOfRecruits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/Ji_num_of_recruits"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/Ji_sub"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutmiddleSection2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutmiddleSection1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Ji_recruited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/Ji_recruited1"/>

                <TextView
                    android:id="@+id/NumOfRecruited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/Ji_num_of_recruits"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/Ji_sub"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutmiddleSection3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutmiddleSection2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/posted_job_status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/status_row_posted_job"/>

                <TextView
                    android:id="@+id/posted_job_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/status"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottomSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middleSection"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/posttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_hint_ForgotPass"
                android:textSize="15sp"
                android:text="@string/Ji_posttime"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/income_color"
                android:textStyle="bold"
                android:layout_toStartOf="@+id/unit3"
                android:textSize="16sp"
                android:text="@string/Ji_salary"
                android:layout_centerVertical="true"/>


            <TextView
                android:id="@+id/unit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textColor="@color/grey_hint_ForgotPass"
                android:layout_alignParentEnd="true"
                android:textSize="15sp"
                android:text="@string/Ji_unit3"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>