<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/home_bg">

    <TextView
        android:id="@+id/dialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fingerAuth_dialogtitle"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@+id/dialogText"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/dialogsubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerAuth_dialogSubtitle"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_below="@+id/line"/>

    <TextView
        android:id="@+id/dismissButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/close"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:layout_below="@+id/dialogsubText"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
