<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginBottom="15dp"
    android:id="@+id/card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/UM_user_avt"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:background="@drawable/image_loading_80px"/>

            <TextView
                android:id="@+id/UM_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:text="@string/username"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_holder"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_email"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_num_holder"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num_title"
                android:textSize="17sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_holder"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_title"
                android:textSize="17sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/role_holder"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role_title"
                android:textSize="17sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/acc_status_holder"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/acc_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_acc"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/acc_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_acc"
                android:textSize="17sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>