<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/topSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/check_in_job_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/post_job_title"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutmiddleSection3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topSection"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/WorkTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/Ji_workTime"/>

                <TextView
                    android:id="@+id/check_in_timeStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/Ji_num_of_recruits"/>
                <TextView
                    android:id="@+id/separate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="-"/>

                <TextView
                    android:id="@+id/check_in_timeEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    android:textSize="17sp"
                    android:text="@string/Ji_num_of_recruits"/>
            </LinearLayout>

            <TextView
                android:id="@+id/check_in_time"
                android:layout_below="@id/layoutmiddleSection3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/Ji_posttime" />

            <TextView
                android:id="@+id/check_in_confirm"
                android:layout_below="@id/check_in_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:text="@string/confirmed" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/check_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in"
                android:background="@drawable/wallet_btn_shape"
                android:backgroundTint="@color/income_color"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                />

        </LinearLayout>

    </RelativeLayout>



</androidx.cardview.widget.CardView>