<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:id="@+id/rowWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wallet_blue_bg"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageMainWalletImage"
                android:layout_gravity="center"
                android:layout_width="320dp"
                android:layout_height="170dp"
                android:scaleType="fitXY"
                tools:src="@drawable/img_mask_group" />

            <LinearLayout
                android:id="@+id/walletInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="15dp"
                android:layout_marginTop="22.4dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="22.4dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtWalletBankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/bank_name"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/walletAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/wallet_amount"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/walletId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/card_number"
                    android:textColor="#ffef5f"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

    </androidx.cardview.widget.CardView>
</layout>
